--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,6 @@
 version: "2.4"
 
 services:
-  redis:
-    image: redis
-    ports:
-      - "5379:6379"
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     environment:
@@ -29,10 +25,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   registry:
-    image: dockerhub/sunbird-rc-core:v0.0.5
+    image: dockerhub/sunbird-rc-core:v0.0.8
     volumes:
       - ${PWD}/schemas:/home/sunbirdrc/config/public/_schemas
-
     environment:
       - connectionInfo_uri=jdbc:postgresql://db:5432/registry
       - connectionInfo_username=postgres
@@ -58,15 +53,20 @@ services:
       - sunbird_keycloak_user_password=abcd@123
       - logging.level.root=DEBUG
       - enable_external_templates=true
+      - async_enabled=true
+      - authentication_enabled=false
+      - kafka_bootstrap_address=kafka:9092
+      - webhook_enabled=true
+      - webhook_url=http://localhost:5001/api/v1/callback
     ports:
-      - "6083:8081"
+      - "8081:8081"
     depends_on:
       es:
         condition: service_healthy
       db:
         condition: service_started
   keycloak:
-    image: dockerhub/ndear-keycloak
+    image: dockerhub/ndear-keycloak:v0.0.8
     volumes:
       - ${PWD}/imports:/opt/jboss/keycloak/imports
     environment:
@@ -87,41 +87,40 @@ services:
       timeout: 10s
       retries: 5
     ports:
-      - "6082:8080"
       - "8080:8080"
-      - "6990:9990"
+      - "9990:9990"
     depends_on:
       db:
         condition: service_started
   claim-ms:
-    image: dockerhub/sunbird-rc-claim-ms:v0.0.5
+    image: dockerhub/sunbird-rc-claim-ms:v0.0.8
     environment:
       - connectionInfo_uri=jdbc:postgresql://db:5432/registry
       - connectionInfo_username=postgres
       - connectionInfo_password=postgres
       - sunbirdrc_url=http://registry:8081
     ports:
-      - "6084:8082"
+      - "8082:8082"
     depends_on:
       db:
         condition: service_started
       registry:
         condition: service_started
   certificate-signer:
-    image: dockerhub/sunbird-rc-certificate-signer:v0.0.5
+    image: dockerhub/sunbird-rc-certificate-signer:v0.0.8
     environment:
       - PORT=8079
     ports:
-      - "6079:8079"
+      - "8079:8079"
   certificate-api:
-    image: dockerhub/sunbird-rc-certificate-api:v0.0.5
+    image: dockerhub/sunbird-rc-certificate-api:v0.0.8
     volumes:
       - ${PWD}/scripts:/scripts
     entrypoint: ["sh", "/scripts/docker-entrypoint.sh"]
     environment:
       - PORT=8078
     ports:
-      - "6078:8078"
+      - "8078:8078"
   verification-ui:
     image: tejashjl/verification
     ports:
@@ -142,3 +141,30 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: "2181"
+      ZOOKEEPER_TICK_TIME: "2000"
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      zookeeper:
+        condition: service_started
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: "1"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:9092,OUTSIDE://localhost:9094"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+    healthcheck:
+      test:
+        [ "CMD", "kafka-topics", "--list", "--zookeeper", "zookeeper:2181" ]
+      interval: 30s
+      timeout: 10s
+      retries: 4
